--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <title>Urbanroots</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzZFfRUGPyOVXtvYswk0uNngxsQLnsVvg"></script>
+  <link rel="icon" type="image/x-icon" href="favicon2.png">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzZFfRUGPyOVXtvYswk0uNngxsQLnsVvg"></script>
 
 </head>
 <body>
