--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
   <title>Urbanroots</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon2.png">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzZFfRUGPyOVXtvYswk0uNngxsQLnsVvg"></script>
+  <link rel="icon" type="image/x-icon" href="/public/favicon1.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap">
+
 
 </head>
 <body>
